--- a/index.html
+++ b/index.html
@@ -16,6 +16,24 @@
     >
       <div>
         <h1>Library Project</h1>
+        <form action="" id="form">
+          <div class="form-groun">
+            <label for="title">Title</label>
+            <input type="text" name="title" id="title" required />
+            </div>
+          <div class="form-groun">
+            <label for="author">Author</label>
+            <input type="text" name="author" id="author" required />
+          </div>
+          <div class="form-groun">
+            <label for="read">Read</label>
+            <input type="checkbox" name="read" id="read" />
+          </div>
+          <div class="form-group">
+            <button type="submit" id="submitBtn">Add Book</button>
+          </div>
+        </form>
+        <hr/>
         <div id="library">
           <!-- Add table here -->
           <table id="table" style="min-width: 680px; margin: 2rem">
@@ -26,7 +44,7 @@
                 <th>Read</th>
               </tr>
             </thead>
-            <tbody>
+            <tbody id="tableBody">
               <tr>
                 <td>Name of the Wind</td>
                 <td>Patrick Rothfuss</td>
@@ -43,6 +61,7 @@
             </tbody>
           </table>
         </div>
+      </div>
     </main>
 
     <script src="app.js"></script>
